Added meta tag for Chrome Frame

--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -5,8 +5,9 @@
 <html lang="en" class="no-js">
 <head>
 	<title>Purchasing - @ViewBag.Title</title>
-
-	<meta name="description" content="">
+    
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="">
 	<meta name="author" content="">
     
     <link type="text/plain" rel="author" href="@Url.Content("~/humans.txt")" />
