Style Line Numbers

--- a/Purchasing.Web/Css/custom.css
+++ b/Purchasing.Web/Css/custom.css
@@ -359,3 +359,12 @@ body .ui-tooltip-default .ui-tooltip-content { background-color: #FFF; border:2p
     padding: 0.3em;
     width: 250px
 }
+
+.lineitem {
+    background: none repeat scroll 0 0 #DDDDDD;
+    box-shadow: -3px 0 5px #CCCCCC inset;
+    color: #FFFFFF;
+    font-size: 1.6em;
+    font-weight: bold;
+    line-height: 0.5em;
+}
