--- a/Purchasing.Web/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Web/Views/Order/ReceiveItems.cshtml
@@ -291,7 +291,7 @@
                     }
                     
                     <tr id="@item.Id" class="@(odd ? "odd" : "even")">
-                        <td>@count</td>               
+                        <td class="lineitem">@count</td>               
                         <td class="receiveLineItemCell">
                             <input class="receiveLineItem showTip" data-id="@item.Id" title="Number of Units received for this line item. Amount will be added to the current number of received items." />
                             <div class="receiveQuantity">@item.QuantityReceived</div>
