--- a/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
@@ -32,7 +32,7 @@
                     var hasMoreInfo = line.Commodity != null || !string.IsNullOrWhiteSpace(line.Notes) || !string.IsNullOrWhiteSpace(line.Url);
                 
                     <tr class="row-item @(odd ? "row-odd" : "row-even") @(!hasLinesplits && !hasMoreInfo ? "row-bottom" : string.Empty)">
-                        <td>@count</td>
+                        <td class="lineitem">@count</td>
                         <td>@line.Quantity</td>
                         <td>@line.Unit</td>
                         <td>@(string.IsNullOrWhiteSpace(line.CatalogNumber) ? "n/a" : line.CatalogNumber)</td>
@@ -44,7 +44,7 @@
                     if (hasLinesplits)
                     {
                         <tr class="@(odd ? "row-odd" : "row-even") @(hasMoreInfo ? "row-bottom" : string.Empty)">
-                            <td></td>
+                            <td class="lineitem"></td>
                             <td colspan="7">
                                 @*<div class="row-split ui-corner-all @(line.UnitPrice * line.Quantity != line.Splits.Sum(a => a.Amount) ? "row-split-prob" : string.Empty)">*@
                                 <div class="row-split ui-corner-all" style="width:90%">
@@ -80,7 +80,7 @@
                     if (hasMoreInfo)
                     {
                         <tr class="@(odd ? "row-odd" : "row-even") row-bottom">
-                            <td></td>
+                            <td class="lineitem"></td>
                             <td colspan="7" class="extra-info">
                                 @if (line.Commodity != null)
                                 {
