Added a confirmation message

--- a/Purchasing.Web/Views/Order/_ReviewCancel.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewCancel.cshtml
@@ -62,7 +62,7 @@
                     <li>
                         <div class="display-label">&nbsp;</div>
                         <div class="display-details">
-                            <input type="submit" id="cancel-order" class="button" value="Cancel Order"/>
+                            <input type="submit" id="cancel-order" class="button" value="Cancel Order" onclick="return confirm('Are you sure? This cannot be undone.')"/>
                         </div>
                     </li>
                 </ul>
