removed the onclick for the confirmation and used the correct way.

--- a/Purchasing.Web/Views/Order/Review.cshtml
+++ b/Purchasing.Web/Views/Order/Review.cshtml
@@ -109,6 +109,7 @@
                 AntiForgeryToken: $('#forgery-token > input[name="__RequestVerificationToken"]').val(),
                 CanEdit: '@Model.CanEditOrder' === 'True',
                 CanCancel: '@Model.CanCancelOrder' === 'True',
+                CanCancelCompletedOrder: '@Model.CanCancelCompletedOrder' === 'True',
                 CanComplete: '@Model.IsPurchaser' === 'True',
                 IsKfsOrder: '@Model.Order.IsValidKfs()' === 'True',
                 IsComplete: '@Model.Order.StatusCode.IsComplete' === 'True',
