First stab at the reports requested by Luci. Has defaulted values.

--- a/Purchasing.Web/Views/Report/Index.cshtml
+++ b/Purchasing.Web/Views/Report/Index.cshtml
@@ -15,6 +15,7 @@
 {
     <li>@Html.ActionLink("Workload Report By Workgroup", "Workload")</li>    
     <li>@Html.ActionLink("Permissions Report", "Permissions")</li>
+    <li>@Html.ActionLink("Orders Summary by Workgroup", "TotalByWorkgroup")</li>
 }
 </ul>
 
