Include administrative workgroups, which are a summary of their child workgroups.

--- a/Purchasing.Web/Views/Report/TotalByWorkgroup.cshtml
+++ b/Purchasing.Web/Views/Report/TotalByWorkgroup.cshtml
@@ -57,6 +57,9 @@
                 Workgroup
             </th>
             <th>
+                Administrative
+            </th>
+            <th>
                 Primary Org
             </th>
             <th>
@@ -85,6 +88,9 @@
                 <td></td>
                 <td>
                     @item.WorkgroupName
+                </td>
+                <td>
+                    @item.Administrative
                 </td>
                 <td>
                     @item.PrimaryOrg
