--- a/Purchasing.Web/Views/Report/Index.cshtml
+++ b/Purchasing.Web/Views/Report/Index.cshtml
@@ -16,6 +16,7 @@
     <li>@Html.ActionLink("Workload Report By Workgroup", "Workload")</li>    
     <li>@Html.ActionLink("Permissions Report", "Permissions")</li>
     <li>@Html.ActionLink("Orders Summary by Workgroup", "TotalByWorkgroup", new{showAdmin=false})</li>
+    <li>@Html.ActionLink("Orders Summary by Primary Organization", "TotalByPrimaryOrg")</li>
 }
 </ul>
 
