Added a vendor summary report, but it is ugly. Maybe there is a SQL alternative?

--- a/Purchasing.Web/Views/Report/Index.cshtml
+++ b/Purchasing.Web/Views/Report/Index.cshtml
@@ -17,6 +17,7 @@
     <li>@Html.ActionLink("Permissions Report", "Permissions")</li>
     <li>@Html.ActionLink("Orders Summary by Workgroup", "TotalByWorkgroup", new{showAdmin=false})</li>
     <li>@Html.ActionLink("Orders Summary by Primary Organization", "TotalByPrimaryOrg")</li>
+    <li>@Html.ActionLink("Orders Summary by Vendor", "TotalByVendor")</li>
 }
 </ul>
 
