--- a/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
@@ -33,7 +33,7 @@
                 
                     <tr class="row-item @(odd ? "row-odd" : "row-even") @(!hasLinesplits && !hasMoreInfo ? "row-bottom" : string.Empty)">
                         <td class="lineitem">@count</td>
-                        <td>@line.Quantity</td>
+                        <td>@string.Format("{0:0.###}", line.Quantity)</td>
                         <td>@line.Unit</td>
                         <td>@(string.IsNullOrWhiteSpace(line.CatalogNumber) ? "n/a" : line.CatalogNumber)</td>
                         <td>@line.Description</td>
