--- a/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
@@ -43,6 +43,7 @@
                                     <option value="">-- Select A Document Type --</option>
                                     <option value="PR">PR (Purchase Request)</option>
                                     <option value="DPO">DPO (Departmental Purchase Order)</option>
+                                    <option value="DPO2">DPO (DPO without saved DaFIS document)</option>
                                     <option value="DRO">DRO (Departmental Repair Order)</option>
                                     <option value="CO">CO (Change Order)</option>
                                     <option value="DC">DC (Direct Charge)</option>
