--- a/Purchasing.Web/Views/Order/_ReviewApprovals.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewApprovals.cshtml
@@ -5,7 +5,7 @@
 {
     <section id="approvals" class="ui-corner-all display-form">
 
-        <header class="ui-corner-top ui-widget-header">Approvals</header>
+        <header class="ui-corner-top ui-widget-header showInNav">Approvals</header>
 
         <div class="section-contents">
     
