--- a/Purchasing.Web/Views/Order/_ReviewAttachments.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewAttachments.cshtml
@@ -2,7 +2,7 @@
 
 <section id="attachments" class="ui-corner-all display-form">
 
-    <header class="ui-corner-top ui-widget-header">Attachments</header>
+    <header class="ui-corner-top ui-widget-header showInNav">Attachments</header>
 
     <div class="section-contents">
         @if (!Model.Attachments.Any())
