--- a/Purchasing.Web/Views/Order/_ReviewControlledSubstances.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewControlledSubstances.cshtml
@@ -5,7 +5,7 @@
     var cs = Model.ControllerSubstance;
     <section id="controlled" class="ui-corner-all display-form">
 
-    <header class="ui-corner-top ui-widget-header">Controlled Substances Information</header>
+    <header class="ui-corner-top ui-widget-header showInNav">Controlled Substances Information</header>
 
     <div class="section-contents">
 
