--- a/Purchasing.Web/Views/Order/_ReviewCustomFields.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewCustomFields.cshtml
@@ -6,7 +6,7 @@
     var customFields = Model.CustomFieldsAnswers.Select(x => x.CustomField);
 <section id="customFields" class="ui-corner-all display-form">
 
-    <header class="ui-corner-top ui-widget-header">Custom Fields</header>
+    <header class="ui-corner-top ui-widget-header showInNav">Custom Fields</header>
 
     <div class="section-contents">
     
