--- a/Purchasing.Web/Views/Order/_ReviewHistory.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewHistory.cshtml
@@ -2,7 +2,7 @@
 
 <section id="history" class="ui-corner-all display-form">
 
-    <header class="ui-corner-top ui-widget-header">Order History</header>
+    <header class="ui-corner-top ui-widget-header showInNav">Order History</header>
 
     <div class="section-contents">
         <table class="noicon">
