--- a/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ReviewOrderViewModel
 <section id="kfs-section" class="ui-corner-all display-form">
 
-    <header class="ui-corner-top ui-widget-header">Financial System Details</header>
+    <header class="ui-corner-top ui-widget-header showInNav">Financial System Details</header>
     <div class="section-contents">
         <div class="col1">
     
