--- a/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
@@ -2,7 +2,7 @@
 
 <section id="line-items" class="ui-corner-all display-form">
 
-    <header class="ui-corner-top ui-widget-header">Line Items </header>
+    <header class="ui-corner-top ui-widget-header showInNav">Line Items </header>
    
     <div class="section-contents">
         <div class="col1">&nbsp;</div><div class="col2">
