--- a/Purchasing.Web/Views/Order/_ReviewLineSplits.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewLineSplits.cshtml
@@ -4,7 +4,7 @@
 {
     <section id="accounts" class="ui-corner-all display-form">
     
-        <header class="ui-corner-top ui-widget-header">Account Information</header>
+        <header class="ui-corner-top ui-widget-header showInNav">Account Information</header>
 
         <div class="section-contents">
         
