--- a/Purchasing.Web/Views/Order/_ReviewNotes.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewNotes.cshtml
@@ -3,7 +3,7 @@
 <section id="notes" class="ui-corner-all display-form">
 
     <header class="ui-corner-top ui-widget-header">
-        <div class="col1">Order Notes</div>
+        <div class="col1 showInNav">Order Notes</div>
         <div class="col2">
             <a href="#" class="button" id="add-note">Add Note</a>
         </div>
