--- a/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ReviewOrderViewModel
 <section id="order-details" class="ui-corner-all display-form">
 
-    <header class="ui-corner-top ui-widget-header">
+    <header class="ui-corner-top ui-widget-header showInNav">
         <a href="#" class="ui-icon ui-icon-help" title="Order Request Number Is For Internal Use Only" style="float:left;" ></a>&nbsp;&nbsp;
         <span style="float:none">Request # @Model.Order.RequestNumber</span>
     </header>
