--- a/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
@@ -3,7 +3,7 @@
 @if (Model.CanEditOrder)
 {
     <section class="ui-corner-all display-form">
-        <header class="ui-corner-top ui-widget-header">Review Decision</header>
+        <header class="ui-corner-top ui-widget-header showInNav">Review Decision</header>
         <div class="section-text">
             @if (Model.CanSubmitOrder)
             {
