--- a/Purchasing.Web/Views/Order/_ReviewCancel.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewCancel.cshtml
@@ -3,7 +3,7 @@
 @if (Model.CanCancelOrder)
 {
     <section class="ui-corner-all display-form">
-        <header class="ui-corner-top ui-widget-header">Cancel Order</header>
+        <header class="ui-corner-top ui-widget-header showInNav">Cancel Order</header>
         <div class="section-text">
             <p>You can cancel this order at any time by entering a Comment (required) and clicking "Cancel Order."</p>    
         </div>
