--- a/Purchasing.Web/Views/Wizard/_StatusBar.cshtml
+++ b/Purchasing.Web/Views/Wizard/_StatusBar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model int
 <div id="statusbar">
-    <h1>@ViewBag.StepName@* @ViewBag.StepNumber*@</h1>
+    <h1>@ViewBag.StepName@* @ViewBag.StepNumber*@ @ViewBag.StepNumber</h1>
     @*    <ul>
         <li class="ui-corner-bl ui-corner-left completed">&nbsp;<span class="hidden_text">Create Workgroup</span></li>
 
@@ -33,6 +33,7 @@
     steps.Add(new KeyValuePair<string, string>("Add Approvers", Url.Action("AddPeople", "Wizard", new { id = Model, roleFilter = "AP" })));
     steps.Add(new KeyValuePair<string, string>("Add Account Managers", Url.Action("AddPeople", "Wizard", new { id = Model, roleFilter = "AM" })));
     steps.Add(new KeyValuePair<string, string>("Add Purchasers", Url.Action("AddPeople", "Wizard", new { id = Model, roleFilter = "PR" })));
+    steps.Add(new KeyValuePair<string, string>("Add Reviewers", Url.Action("AddPeople", "Wizard", new { id = Model, roleFilter = "RV" })));
     if(!ViewBag.IsAdministrative)
     {
         if(!ViewBag.IsAccountSync)
@@ -59,7 +60,7 @@
             }
             else
             {
-                if(ViewBag.IsAccountSync && stepNum >= 7)
+                if(ViewBag.IsAccountSync && stepNum >= 8)
                 {
                     filteredStepNum = stepNum - 1;
                 }
