--- a/Purchasing.Web/Views/Wizard/_StatusBar.cshtml
+++ b/Purchasing.Web/Views/Wizard/_StatusBar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model int
 <div id="statusbar">
-    <h1>@ViewBag.StepName@* @ViewBag.StepNumber*@ @ViewBag.StepNumber</h1>
+    <h1>@ViewBag.StepName@* @ViewBag.StepNumber*@</h1>
     @*    <ul>
         <li class="ui-corner-bl ui-corner-left completed">&nbsp;<span class="hidden_text">Create Workgroup</span></li>
 
