Unit needed a unique id for chosen to work.

--- a/Purchasing.Web/Views/Order/_UnitOfMeasureSelectTemplate.cshtml
+++ b/Purchasing.Web/Views/Order/_UnitOfMeasureSelectTemplate.cshtml
@@ -1,7 +1,10 @@
 ﻿@using Purchasing.Core.Domain
 @model IEnumerable<UnitOfMeasure>
 <script id="unit-of-measure-select-template" type="text/x-jquery-tmpl">
-    <select data-bind="value: unit" class="unit" id="units" name="items[${index}].units">
+    @{
+        var extra = "units_" + "${index}";        
+    }
+    <select data-bind="value: unit" class="unit" id="@extra" name="items[${index}].units">
         @foreach (UnitOfMeasure unit in Model)
         {
             <option value="@unit.Id">@unit.Name</option>
